[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", optional = true, features = ["macros"] }
dotenv ={ version = "0.15.0", optional = true }
env_logger = "0.10.0"
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", features = ["metal"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0"
